--- a/_posts/2019-03-01-Vue.js入门教程.md
+++ b/_posts/2019-03-01-Vue.js入门教程.md
@@ -15,7 +15,20 @@ tags:
 
 >关于结缘的前端使用哪种框架，笔者之前有过Angular.js的开发经验，在React.js和Vue.js之间徘徊了一阵子最终选择了Vue，在我看来Vue和Angular有许多的共同点，在看Vue的文档的时候有很熟悉的味道，但和React类似只关注View这一块。Vue没有像React那样什么都放到js中，简洁方便的api设计以及组件式开发是我选择它的主要原因。
 >
+<!--作者信息-->
 
+<vieo>
+	<script src="http://114.116.66.50:8081/article/layui/layui.all.js"></script>
+    <h4 class="title">连续7场30+抛进制胜球 哈登送上圣诞大礼</h4>
+    <div class="author">
+        <div class="author-info">
+            <img src="http://114.116.66.50:8081/article/user.png" class="img-circle">
+            <span>卡布奇诺咖啡</span>
+            <p>2018/12/10 22:00</p>
+        </div>
+        <button class="btn" id="take">订 阅</button>
+    </div>
+</header>
 
 **作者**：兼续<img src="https://upload.jianshu.io/users/upload_avatars/83902/e247758c6118.png"  width="60" height="60">
 
